# mta-board

./: .gitignore  README.md  config.json.example  debug.py  install.sh  main.py  pyproject.toml  utils.py
colors/: scoreboard.json.example
coordinates/: w32h32.json.example  w64h32.json.example
data/: __init__.py  dates.py  routes.csv  routes.py  routes.txt  stops.py  stops.txt  trains.py  weather.py
data/config/: __init__.py  layout.py
renderers/: main.py  network.py  scrollingtext.py  trains.py  weather.py
scripts/: update_data.py
src/mta_board/: __init__.py  config.py  renderer.py  routes.csv  routes.py  stops.csv  stops.py  trains.py
